# Formal_Practice1

./: .travis.yml  CMakeLists.txt  README.md
gtests/: tests.cpp
solution_src/: solution.cpp  solution.h
